[package]
name = "unit3-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = "0.7.0"
engine-simple = {path="../engine-simple"}
winit = "0.28"
rand = "0.8"
image = {version="0.24.7", features=["png"]}
bytemuck = "1.14.0"
kira = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.3"

[features]
default = []
webgl = ["engine-simple/webgl"]
